# NeilBot

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bot.py  dev-requirements.txt  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: fly.yml
neilbot/: bot.py  neilbot.py
neilbot/cogs/: _downloader.py  _playerButtons.py  _youtubeDownloader.py  anyone.py  events.py  leetcode.py  photo.py  player.py
