[project]
name = "NeilBot"
version = "0.0.1"
description = "A Discord bot made by Neil."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "NeilBot"
version = "0.0.1"
description = "A Discord bot made by Neil."
authors = ["Neil Wiborg"]

[tool.poetry.scripts]
neilbot = "neilbot.bot:main"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {extras = ["voice"], version = "^2.3.2"}
yt-dlp = "^2022.11.11"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pyupgrade = "^3.3.1"
autoflake = "^2.0.0"
isort = "^5.11.1"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-typing-imports = "^1.14.0"
mccabe = "^0.7.0"
mypy = "^0.991"
vulture = "^2.6"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.vulture]
ignore_decorators = ["@discord.slash_command", "@commands.Cog.listener"]
ignore_names = ["setup"]
paths = ["neilbot"]
