[project]
name = "NeilBot"
version = "0.0.1"
description = "A Discord bot made by Neil."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "NeilBot"
version = "0.0.1"
description = "A Discord bot made by Neil."
license = "GPL-3.0-only"
authors = ["Neil Wiborg <NeilWiborg@outlook.com>"]

[tool.poetry.scripts]
neilbot = "main:main"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {extras = ["voice"], version = "^2.4.1"}
yt-dlp = "^2023.03.04"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
validators = "^0.20.0"
apscheduler = "^3.10.1"
pymongo =  {extras = ["srv"], version = "^4.3.3"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
pyupgrade = "^3.7.0"
autoflake = "^2.1.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
mccabe = "^0.7.0"
mypy = "^1.3.0"
vulture = "^2.7"
codespell = "^2.2.4"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.flake8]
ignore = ["E203", "W503"]
max-line-length = 88
max-complexity = 10

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "yt_dlp"
ignore_missing_imports = true

[tool.vulture]
ignore_decorators = ["@discord.slash_command",
                    "@discord.ui.button",
                    "@commands.Cog.listener"
]
ignore_names = ["setup", "on_ready"]
paths = ["neilbot"]
